--- a/index.html
+++ b/index.html
@@ -87,4 +87,25 @@
 
 
 </body>
+
+<footer class="footer">
+	<div class="div-padre">
+		<div class="div-md">
+			<h1>Hecho por</h1>
+			<p>Regina Bernal Galicia</p>
+			<p>Alumna de Escuela de código</p>
+		</div>
+
+		<div class="div-md">
+			<h1>Correo:</h1>
+			<a href="mailto:reginabernal.g@gmail.com">reginabernal.g.com</a>
+		</div>
+	</div>
+
+
+	<hr>
+	<p class="texto-footer">Derechos reservados 2021 &copy</p>
+
+</footer>
+
 </html>
