--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 		<div class="div-md">
 			<h1>Correo:</h1>
-			<a href="mailto:reginabernal.g@gmail.com">reginabernal.g.com</a>
+			<a href="mailto:reginabernal.g@gmail.com">reginabernal.g@gmail.com</a>
 		</div>
 	</div>
 
