--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="div-padre">
 		<div class="div-md">
 			<h1>Hecho por</h1>
-			<p>Regina Bernal Galicia</p>
+			<p>Regina Bernal</p>
 			<p>Alumna de Escuela de código</p>
 		</div>
 
